@@ -156,152 +156,44 @@
     </dependencies>
 
     <build>
-        <resources>
-            <resource>
-                <directory>${project.basedir}/src/main/resources</directory>
-            </resource>
-            <resource>
-                <targetPath>../mywrapper/etc</targetPath>
-                <directory>${project.basedir}/src/main/resources/</directory>
-                <includes>
-                    <include>**/*.xls</include>
-                    <include>**/*.xml</include>
-                    <include>**/*.properties</include>
-                    <include>**/*.bat</include>
-                </includes>
-            </resource>
-            <resource>
-                <targetPath>../wrapper/jsw/mywrapper/bin</targetPath>
-                <directory>${project.basedir}/src/main/resources/</directory>
-                <includes>
-                    <include>**/*.bat</include>
-                </includes>
-            </resource>
-            <resource>
-                <targetPath>../wrapper/jsw/mywrapper/etc</targetPath>
-                <directory>${project.basedir}/src/main/resources/</directory>
-                <includes>
-                    <include>**/*.xls</include>
-                    <include>**/*.xml</include>
-                    <include>**/*.properties</include>
-                    <include>**/*.bat</include>
-                </includes>
-            </resource>
-        </resources>
-
-        <testResources>
-            <testResource>
-                <directory>${project.basedir}/src/test/java</directory>
-            </testResource>
-            <testResource>
-                <directory>${project.basedir}/src/main/resources</directory>
-            </testResource>
-        </testResources>
-
         <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.1</version>
-                <configuration>
-                    <source>1.7</source>
-                    <target>1.7</target>
-                </configuration>
-            </plugin>
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>appassembler-maven-plugin</artifactId>
-                <version>1.3</version>
-                <executions>
-                    <execution>
-                        <id>generate start scripts</id>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>assemble</goal>
-                        </goals>
-                        <configuration>
-                            <repositoryLayout>flat</repositoryLayout>
-                            <programs>
-                                <program>
-                                    <!-- 通过批处理 运行Main类 -->
-                                    <mainClass>
-                                        com.flinkinfo.monitordata.main.App
-                                    </mainClass>
-                                    <name>init_app</name>
-                                </program>
-                            </programs>
-                        </configuration>
-                    </execution>
-                    <execution>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>generate-daemons</goal>
-                        </goals>
-                        <configuration>
-                            <repositoryLayout>flat</repositoryLayout>
-                            <target>${project.build.directory}/wrapper</target>
-                            <!--<includeConfigurationDirectoryInClasspath>true</includeConfigurationDirectoryInClasspath>-->
-                            <useDaemonIdAsWrapperConfName>true</useDaemonIdAsWrapperConfName>
-                            <daemons>
-                                <daemon>
-                                    <id>mywrapper</id>
-                                    <!-- 打包成windows服务的Main类 -->
-                                    <mainClass>com.flinkinfo.monitordata.main.App</mainClass>
-                                    <!-- <commandLineArguments> <commandLineArgument>start</commandLineArgument>
-                                        </commandLineArguments> -->
-                                    <!-- <jvmSettings> <initialMemorySize>20M</initialMemorySize> <maxMemorySize>200M</maxMemorySize>
-                                        <maxStackSize>128M</maxStackSize> </jvmSettings> -->
-                                    <platforms>
-                                        <platform>jsw</platform>
-                                    </platforms>
-                                    <generatorConfigurations>
-                                        <generatorConfiguration>
-                                            <generator>jsw</generator>
-                                            <includes>
-                                                <include>linux-x86-32</include>
-                                                <include>linux-x86-64</include>
-                                                <include>macosx-universal-32</include>
-                                                <include>macosx-universal-64</include>
-                                                <include>windows-x86-32</include>
-                                                <include>windows-x86-64</include>
-                                            </includes>
-                                            <configuration>
-                                                <property>
-                                                    <name>configuration.directory.in.classpath.first</name>
-                                                    <value>etc</value>
-                                                </property>
-                                            </configuration>
-                                        </generatorConfiguration>
-                                    </generatorConfigurations>
-                                </daemon>
-                            </daemons>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>cobertura-maven-plugin</artifactId>
-                <version>2.5.2</version>
+                <version>1.2</version>
+
                 <configuration>
-                    <formats>
-                        <format>html</format>
-                        <format>xml</format>
-                    </formats>
-                    <check/>
+                    <repositoryLayout>flat</repositoryLayout>
+                    <repositoryName>lib</repositoryName>
+                    <configurationSourceDirectory>src/main/resources</configurationSourceDirectory>
+                    <!-- Set the target configuration directory to be used in the bin scripts -->
+                    <configurationDirectory>conf</configurationDirectory>
+                    <!-- Copy the contents from "/src/main/config" to the target configuration
+                        directory in the assembled application -->
+                    <copyConfigurationDirectory>true</copyConfigurationDirectory>
+                    <!-- Include the target configuration directory in the beginning of
+                        the classpath declaration in the bin scripts -->
+                    <includeConfigurationDirectoryInClasspath>true</includeConfigurationDirectoryInClasspath>
+                    <!-- prefix all bin files with "mycompany" -->
+                    <!-- set alternative assemble directory -->
+                    <assembleDirectory>${project.build.directory}/server</assembleDirectory>
+                    <!-- Extra JVM arguments that will be included in the bin scripts -->
+                    <extraJvmArguments>-Xms768m -Xmx768m -XX:PermSize=128m
+                        -XX:MaxPermSize=256m -XX:NewSize=192m -XX:MaxNewSize=384m
+                    </extraJvmArguments>
+                    <!-- Generate bin scripts for windows and unix pr default -->
+                    <platforms>
+                        <platform>windows</platform>
+                        <platform>unix</platform>
+                    </platforms>
+                    <programs>
+                        <program>
+                            <mainClass>com.flinkinfo.monitordata.main.App</mainClass>
+                            <name>startup</name>
+                        </program>
+                    </programs>
                 </configuration>
             </plugin>
         </plugins>
     </build>
-
-
-    <reporting>
-        <plugins>
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>cobertura-maven-plugin</artifactId>
-                <version>2.5.2</version>
-            </plugin>
-        </plugins>
-    </reporting>
 </project>
